--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: stateless_demo
-description: A new Flutter project.
+name: flutter_create_stateless
+description: An alternate (Stateless) Flutter starter project.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
